--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -8,7 +8,7 @@
     text-align: center;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: x-large;
-    padding-top: 200px;
+    padding-top: 15%;
 }
 .navbar{
     float: right;
